public/css/main.css
/* ... */
blockquote cite::before {
    content: ' ―';
    padding-right: 0.5em;
}

em {
    font-style: italic;
}

h1, h2, h3, h4, h5, h6 {
    font-family: var(--heading-font);
    margin: 1.5em 0 0.6em 0;
    color: var(--fore-headings);
    line-height: 1em;
}

h1 {
    font-size: 3rem;
    font-size: clamp(2rem, 6vw, 3rem);
    margin: 0.4em 0 0.6em 0;
}

h2 {
    font-size: 2.6em;
    font-size: clamp(1.8em, 3.5vw, 2.6em);
}

h3 {
    font-size: 2.3em;
    font-size: clamp(1.6em, 3vw, 2.3em);
}

h4, h5, h6 {
    font-size: 2em;
    font-size: clamp(1.4em, 2.5vw, 2em);
}

hr {
    border: 0.5px dashed var(--fore);
    opacity: 0.5;
    width: 80%;
    margin: var(--paragraph-margin) auto;
}

figure {
    border-top: 1px solid var(--icon-block);
    border-bottom: 1px solid var(--icon-block);
    background-color: var(--aft-block);
    padding: 0 1rem;
}

figcaption {
    font-style: italic;
    text-align: center;
    font-size: 0.8em;
}

img {
    max-width: 100%;
}

img.resp-img {
    width: 100%;
    height: auto;
}

figure img {
    box-shadow: var(--box-shadow);
}

li::marker {
    color: var(--fore-headings);
}

.page-content ul:not(.post-list), .page-content ol {
    margin: var(--paragraph-margin) 0 var(--paragraph-margin) 1.2rem;
}

.page-content > h2:nth-child(1) {
    margin-top: 0;
}

p {
    margin: var(--paragraph-margin) 0;
}

strong {
    font-weight: bold;
}

.table-wrap {
    overflow: auto;
    max-width: 100%;
}

table {
    border-collapse: collapse;
    border: 0.5px solid var(--fore);
    width: 100%;
    border-radius: var(--block-radius);
}

thead tr {
    background-color: var(--aft-table-head);
    color: var(--fore-table-head);
}

th, td {
    border: 0.5px solid var(--fore);
    padding: 0.2em 0.3em;
}

tbody tr {
    background-color: var(--aft-table-row-even);
    color: var(--fore-table-row-even);
}

tbody tr:nth-child(odd) {
    background-color: var(--aft-table-row-odd);
    color: var(--fore-table-row-odd);
}

/* Skip Links */
nav.skip-links {
    position: absolute;
}

nav.skip-links a {
    clip: rect(0 0 0 0);
    background-color: var(--aft);
    min-width: 20vw;
    overflow: hidden;
    padding: 1rem;
    position: absolute;
    z-index: 15;
    text-align: center;
    display: inline-block;
    height: 1px;
    margin: -1px;
    width: 1px;
}

nav.skip-links a:focus {
    clip: auto;
    height: auto;
    margin: 0.2em;
    overflow: visible;
    width: auto;
}

 /* Breadcrumbs */

 .site-breadcrumbs ol {
    font-size: 0.8rem;
    background-color: var(--aft-breadcrumb);
    color: var(--fore-breadcrumb);
    padding: 0 1em;
    text-align: center;
}

.site-breadcrumbs li {
    display: inline;
    padding: 0.2em;
}

.site-breadcrumbs li::before {
    content: '>'
}

.site-breadcrumbs li:first-child::before {
    content: ''
}

.site-breadcrumbs a[aria-current] {
    color: var(--fore);
    text-decoration: none;
}

@media (max-width: 860px) {
  .site-breadcrumbs ol {
    text-align: center;
  }
}

/* Header */
.site-header {
    color: var(--fore-head);
    background-color: var(--aft-head);
    text-align: center;
    font-size: 2rem;
    font-size: clamp(1.2em, 4vw, 2em);
    padding: 1rem;
    position: sticky;
    top: 0;
    z-index: 10;
}

.site-header a {
    color: var(--link-head);
    text-decoration: none;
}

.site-header a:hover,
.site-header a:focus {
    color: var(--link-alt-head);
    background-color: unset;
}

.site-header .site-title {
    letter-spacing: -1px;
    text-transform: uppercase;
    margin: 0 30px;
    display: block;
}

.site-header .navigation-icon {
    display: none;
    position: fixed;
    top: 10px;
    left: 10px;
    stroke: var(--link-head);
}

.site-header .search-icon {
    position: fixed;
    top: 10px;
    right: 10px;
    stroke: var(--link-head);
}

@media (max-width: 860px) {
  .site-header .navigation-icon {
    display: block;
  }
}

/* Navigation */

nav.site-nav.sticky {
    align-self: start;
    position: sticky;
}

nav.site-nav h2 {
    margin-top: 0.1em;
    display: none;
}

@media (max-width: 860px) {
  nav.site-nav h2 {
      display: block;
  }

  nav.site-nav {
      grid-row: 2;
  }
}

.site-nav li {
    list-style: none;
}

.site-nav a {
    text-indent: var(--marker-size);
    width: calc(100% - 2.07rem);
    display: inline-block;
    padding: 0.5rem 1rem;
}

.site-nav li.has-children summary span {
    text-indent: 0;
    width: calc(100% - 2.07rem - var(--marker-size));
    display: inline-block;
    padding: 0.5rem 1rem;
    text-decoration: underline;
}

.site-nav li.has-children ul a {
    width: calc(100% - 2rem);
    text-indent: calc(var(--marker-size) * 2);
}

.site-nav li.has-children ul details {
    width: calc(100% - var(--marker-size));
    margin-inline-start: var(--marker-size);
}

.site-nav a[aria-current] {
    font-weight: bold;
}

.site-nav details summary {
    cursor: pointer;
}

.site-nav details summary::-webkit-details-marker,
.site-nav details summary::marker {
    font-size: var(--marker-size);
    width: 1em;
}

/* Alternative navigation example */

.site-nav-bar {
    position: sticky;
    top: 62px;
    background-color: var(--aft-breadcrumb);
    z-index: 10;
    box-shadow: var(--box-shadow);
}

.site-nav-bar h2 {
    display: none;
}

@media (max-width: 860px) {
    .site-nav-bar h2 {
        display: block;
    }
  
    .site-nav-bar {
        display: none;
    }
  }

.site-nav-bar ul {
    list-style: none;
    text-align: center;
}

.site-nav-bar ul li {
    display: inline-block;
    margin: 0 1rem;
}

.site-nav-bar ul li a {
    display: block;
    padding: 0.3rem 0.5rem;
}

.overlay-menu .site-nav-bar li {
    display: block;
    margin: 0.3rem;
}

.overlay-menu .site-nav-bar {
    display: block;
}

.overlay-menu a, .overlay-menu summary {
    border-bottom: 1px solid var(--fore-link);
    border-radius: var(--block-radius) var(--block-radius) 0 0;
}
/* ... */

